change version to v3.2.0